--- a/index.html
+++ b/index.html
@@ -4,9 +4,117 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <script src="https://kit.fontawesome.com/dac6d8f3a1.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="style.css" />
   <title>WALS成果物</title>
 </head>
+
 <body>
-  
+  <header>
+    <nav>
+      <img class="logo" src="img/logo.png" alt="MySite webcamp" height="70"></img>
+      <ul>
+        <li>Portfolio</li>
+        <li>Feature</li>
+        <li>Profile</li>
+        <li>Contact</li>
+      </ul>
+    </nav>
+  </header>
+
+  <section class="main-visual">
+    <div>
+      <h1>Lorem Ipsum</h1>
+      <p class="main-visual-text">simply dummy text of the printing</p>
+    </div>
+  </section>
+
+  <section class="portfolio">
+    <div class= "portfolio-main">
+      <h2 class="heading">Portfolio</h2>
+      <p class="heading-text">It is a long established fact that a reader will be distracted by the readable<br/>content of a page when looking at its layout.<br/>The point of using Lorem Ipsum is that it has a more-or-less normal disyribution of letters</p>
+
+      <div class="pic-box">
+        <div class="pic"></div>
+        <div class="pic"></div>
+        <div class="pic"></div>
+        <div class="pic"></div>
+        <div class="pic"></div>
+        <div class="pic"></div>
+      </div>
+    </div>
+  </section>
+
+  <section class="feature">
+    <div class="feature-main">
+      <h2 class="heading">Feature</h2>
+      <p class="heading-text">It is a long established fact that a reader will be distracted by the readable<br/>content of a page when looking at its layout.<br/>The point of using Lorem Ipsum is that it has a more-or-less normal disyribution of letters</p>
+      <div class="strength-box">
+        <div class="strength">
+          <i class="fas fa-kiwi-bird icon"></i>
+          <h3 class="strength-title">Strength1</h3>
+          <p class="strength-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur</p>
+        </div>
+        <div class="strength">
+          <i class="fas fa-kiwi-bird icon"></i>
+          <h3 class="strength-title">Strength2</h3>
+          <p class="strength-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur</p>
+        </div>
+        <div class="strength">
+          <i class="fas fa-kiwi-bird icon"></i>
+          <h3 class="strength-title">Strength3</h3>
+          <p class="strength-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="profile">
+    <div class="profile-main">
+      <h2 class="heading">Profile</h2>
+      <p class="heading-text">It is a long established fact that a reader will be distracted by the readable<br/>content of a page when looking at its layout.<br/>The point of using Lorem Ipsum is that it has a more-or-less normal disyribution of letters</p>
+
+      <div class="profile-container">
+        <div class="profile-icon"></div>
+        <div class="profile-box">
+          <div class="profile-item">
+            <h3 class="profile-title">MyName</h3>
+            <p class="profile-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur</p>
+          </div>
+          <div class="profile-item">
+            <h3 class="profile-title">MySkills</h3>
+            <p class="profile-text">HTML/CSS/JavaScript/JQuery/Photoshop</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="contact">
+    <div class="contact-main">
+      <h2 class="heading">Contact</h2>
+      <p class="heading-text">It is a long established fact that a reader will be distracted by the readable<br/>content of a page when looking at its layout.<br/>The point of using Lorem Ipsum is that it has a more-or-less normal disyribution of letters</p>
+
+      <div class="contact-container">
+        <div class="left-content">
+					<div class="left-contact-content">
+						<h3 class="description-title">Mail</h3>
+						<a class="description-text">xxx@xxx.com</a>
+						<h3 class="description-title">Tel</h3>
+						<a class="description-text">000-0000-0000</a>
+					</div>
+				</div>
+        <div class="right-content">
+          <div class="right-contact-content">
+            <h3 class="show-title">SNS</h3>
+            <i class="fa-brands fa-facebook-f sns"></i>
+            <i class="fa-brands fa-twitter sns"></i>
+            <i class="fa-brands fa-instagram sns"></i>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
 </body>
 </html>
