[Finish]レスポンシブ対応

--- a/index.html
+++ b/index.html
@@ -11,28 +11,37 @@
 
 <body>
   <header>
-    <nav>
+    <div class="container header-group">
       <img class="logo" src="img/logo.png" alt="MySite webcamp" height="70"></img>
-      <ul>
-        <li>Portfolio</li>
-        <li>Feature</li>
-        <li>Profile</li>
-        <li>Contact</li>
-      </ul>
-    </nav>
+      
+      <div class="menu-box">
+				<span class="list-bar"></span>
+				<span class="list-bar"></span>
+				<span class="list-bar"></span>
+			</div>
+            
+      <nav class="pc">
+        <ul>
+          <li>Portfolio</li>
+          <li>Feature</li>
+          <li>Profile</li>
+          <li>Contact</li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
   <section class="main-visual">
-    <div>
+    <div class="container">
       <h1>Lorem Ipsum</h1>
       <p class="main-visual-text">simply dummy text of the printing</p>
     </div>
   </section>
 
   <section class="portfolio">
-    <div class= "portfolio-main">
+    <div class= "container portfolio-main">
       <h2 class="heading">Portfolio</h2>
-      <p class="heading-text">It is a long established fact that a reader will be distracted by the readable<br/>content of a page when looking at its layout.<br/>The point of using Lorem Ipsum is that it has a more-or-less normal disyribution of letters</p>
+      <p class="heading-text">It is a long established fact that a reader will be distracted by the readable<br/>content of a page when looking at its layout.<br/>The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
 
       <div class="pic-box">
         <div class="pic"></div>
@@ -46,22 +55,22 @@
   </section>
 
   <section class="feature">
-    <div class="feature-main">
+    <div class="container feature-main">
       <h2 class="heading">Feature</h2>
-      <p class="heading-text">It is a long established fact that a reader will be distracted by the readable<br/>content of a page when looking at its layout.<br/>The point of using Lorem Ipsum is that it has a more-or-less normal disyribution of letters</p>
+      <p class="heading-text">It is a long established fact that a reader will be distracted by the readable<br/>content of a page when looking at its layout.<br/>The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
       <div class="strength-box">
         <div class="strength">
-          <i class="fas fa-kiwi-bird icon"></i>
+          <i class="fa fa-code icon"></i>
           <h3 class="strength-title">Strength1</h3>
           <p class="strength-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur</p>
         </div>
         <div class="strength">
-          <i class="fas fa-kiwi-bird icon"></i>
+          <i class="fa fa-desktop icon"></i>
           <h3 class="strength-title">Strength2</h3>
           <p class="strength-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur</p>
         </div>
         <div class="strength">
-          <i class="fas fa-kiwi-bird icon"></i>
+          <i class="fas fa-cogs icon"></i>
           <h3 class="strength-title">Strength3</h3>
           <p class="strength-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur</p>
         </div>
@@ -70,9 +79,9 @@
   </section>
 
   <section class="profile">
-    <div class="profile-main">
+    <div class="container profile-main">
       <h2 class="heading">Profile</h2>
-      <p class="heading-text">It is a long established fact that a reader will be distracted by the readable<br/>content of a page when looking at its layout.<br/>The point of using Lorem Ipsum is that it has a more-or-less normal disyribution of letters</p>
+      <p class="heading-text">It is a long established fact that a reader will be distracted by the readable<br/>content of a page when looking at its layout.<br/>The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
 
       <div class="profile-container">
         <div class="profile-icon"></div>
@@ -83,7 +92,7 @@
           </div>
           <div class="profile-item">
             <h3 class="profile-title">MySkills</h3>
-            <p class="profile-text">HTML/CSS/JavaScript/JQuery/Photoshop</p>
+            <p class="profile-text">HTML/CSS,JavaScript/JQuery/Photoshop</p>
           </div>
         </div>
       </div>
@@ -91,9 +100,9 @@
   </section>
 
   <section class="contact">
-    <div class="contact-main">
+    <div class="container contact-main">
       <h2 class="heading">Contact</h2>
-      <p class="heading-text">It is a long established fact that a reader will be distracted by the readable<br/>content of a page when looking at its layout.<br/>The point of using Lorem Ipsum is that it has a more-or-less normal disyribution of letters</p>
+      <p class="heading-text">It is a long established fact that a reader will be distracted by the readable<br/>content of a page when looking at its layout.<br/>The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
 
       <div class="contact-container">
         <div class="left-content">
@@ -115,6 +124,10 @@
       </div>
     </div>
   </section>
+  
+  <footer>
+    <p class="footer-text">© 2017 WebCamp</p>
+  </footer>
 
 </body>
 </html>
